--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./css/gallery.css" />
   </head>
   <body>
+    <ul class="gallery"></ul>
 
     <script src="./js/1-gallery.js" type="module"></script>
   </body>
