--- a/src/1-gallery.html
+++ b/src/1-gallery.html
@@ -5,9 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Gallery</title>
-    <link rel="stylesheet" href="./css/gallery.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
-  <body>
+  <body></body>
+    <a class="go-back-link" href="index.html">Go back</a>
     <ul class="gallery"></ul>
 
     <script src="./js/1-gallery.js" type="module"></script>
