--- a/src/2-form.html
+++ b/src/2-form.html
@@ -5,9 +5,23 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Form</title>
-    <link rel="stylesheet" href="./css/form.css" />
+    <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
+    <a class="go-back-link" href="index.html">Go back</a>
+
+    <form class="feedback-form" autocomplete="off">
+      <label>
+        Email
+        <input type="email" name="email" autofocus />
+      </label>
+      <label>
+        Message
+        <textarea name="message" rows="8"></textarea>
+      </label>
+      <button type="submit">Submit</button>
+    </form>
+    
 
     <script src="./js/2-form.js" type="module"></script>
   </body>
