--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,8 @@
 
     <nav>
       <ul>
-        <li><a href="./1-gallery.html">Gallery</a></li>
-        <li><a href="./2-form.html">Form</a></li>
+        <li class="nav-link"><a href="./1-gallery.html">Gallery</a></li>
+        <li class="nav-link"><a href="./2-form.html">Form</a></li>
       </ul>
     </nav>
 
